# VQ-VAE_and_LFQ_for_Protein_Structure_Embedding

./: LFQ_trainer.py  README.md  VQ_trainer.py  infer.py  pyproject.toml  trainer.py
.github/: dependabot.yml
.github/workflows/: dependency-update.yml  python-package-conda.yml
config/: lfq_train.yml  train.yml
tools/: create_default_train_config.py  create_default_yaml.py  precompute_patches_lmdb.py  uncompress_pdb.sh
vqtokenizer/datasets/: datapipe.py
vqtokenizer/nn/: backbone.py  lfq_backbone.py  lfq_layer.py  lfq_tokenizer_wrapper.py  module.py  transformerblock.py  vq_backbone.py  vq_layer.py
vqtokenizer/utils/: functional.py
